kubernetes/networking/routes/dbx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbx-redirect
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: http
  hostnames:
    - dbx.yral.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbx
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - dbx.yral.com
  rules:
    - backendRefs:
        - name: oauth2-proxy-dbx
          namespace: oauth2-proxy
          port: 4180
