kubernetes/networking/routes/harbor.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-redirect
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: http
  hostnames:
    - harbor.yral.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - harbor.yral.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v2/
      backendRefs:
        - name: harbor
          namespace: harbor
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /service/token
      backendRefs:
        - name: harbor
          namespace: harbor
          port: 80
    - backendRefs:
        - name: oauth2-proxy-harbor
          namespace: oauth2-proxy
          port: 4180
