kubernetes/networking/routes/kafka.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: kafka-bootstrap
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: kafka
  hostnames:
    - kafka.yral.com
  rules:
    - backendRefs:
        - name: kafka-cluster-kafka-external-bootstrap
          namespace: kafka
          port: 9094
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: kafka-broker-3
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: kafka
  hostnames:
    - kafka-broker-3.yral.com
  rules:
    - backendRefs:
        - name: kafka-cluster-combined-ceph-3
          namespace: kafka
          port: 9094
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: kafka-broker-4
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: kafka
  hostnames:
    - kafka-broker-4.yral.com
  rules:
    - backendRefs:
        - name: kafka-cluster-combined-ceph-4
          namespace: kafka
          port: 9094
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: kafka-broker-5
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: kafka
  hostnames:
    - kafka-broker-5.yral.com
  rules:
    - backendRefs:
        - name: kafka-cluster-combined-ceph-5
          namespace: kafka
          port: 9094
