kubernetes/networking/routes/metabase.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metabase-redirect
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: http
  hostnames: [metabase.yral.com]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect: {scheme: https, statusCode: 301}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metabase
  namespace: kube-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: https
  hostnames: [metabase.yral.com]
  rules:
    - backendRefs:
        - name: oauth2-proxy-metabase
          namespace: oauth2-proxy
          port: 4180
